--- a/AutoMall/ViewControllers/Upkeep/CheckResultCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="17B48" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -36,12 +36,12 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z3W-mw-MXn">
-                        <rect key="frame" x="211" y="5" width="40" height="40"/>
+                        <rect key="frame" x="201" y="5" width="40" height="40"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="40" id="oBm-O3-04b"/>
                             <constraint firstAttribute="height" constant="40" id="qma-Id-swq"/>
                         </constraints>
-                        <inset key="imageEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                        <inset key="imageEdgeInsets" minX="12" minY="12" maxX="12" maxY="12"/>
                         <state key="normal" image="lookPhoto"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bG-tR-RG2">
@@ -270,7 +270,7 @@
                             <constraint firstAttribute="height" constant="40" id="6Fa-qC-KJB"/>
                             <constraint firstAttribute="width" constant="40" id="vWy-Ug-JqK"/>
                         </constraints>
-                        <inset key="imageEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                        <inset key="imageEdgeInsets" minX="12" minY="12" maxX="12" maxY="12"/>
                         <state key="normal" image="lookPhoto"/>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="燃油量" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RcV-A3-zgd">
@@ -291,7 +291,7 @@
                             <constraint firstAttribute="height" constant="40" id="rKf-us-CEc"/>
                             <constraint firstAttribute="width" constant="40" id="xQm-W1-Qkd"/>
                         </constraints>
-                        <inset key="imageEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
+                        <inset key="imageEdgeInsets" minX="12" minY="12" maxX="12" maxY="12"/>
                         <state key="normal" image="lookPhoto"/>
                     </button>
                 </subviews>
@@ -374,7 +374,7 @@
                     <constraint firstAttribute="trailing" secondItem="DKQ-E6-sxi" secondAttribute="trailing" id="hQa-iB-iyb"/>
                     <constraint firstAttribute="trailing" secondItem="HU7-kF-44I" secondAttribute="trailing" id="hZe-Ea-lQO"/>
                     <constraint firstItem="DKQ-E6-sxi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="hya-P8-syg"/>
-                    <constraint firstItem="Z3W-mw-MXn" firstAttribute="leading" secondItem="z6f-zH-NIz" secondAttribute="trailing" constant="10" id="i4D-YD-YnR"/>
+                    <constraint firstItem="Z3W-mw-MXn" firstAttribute="leading" secondItem="z6f-zH-NIz" secondAttribute="trailing" id="i4D-YD-YnR"/>
                     <constraint firstItem="QRn-My-q2W" firstAttribute="top" secondItem="CsU-Qi-TPa" secondAttribute="bottom" id="i7r-qh-QX8"/>
                     <constraint firstAttribute="bottom" secondItem="QRn-My-q2W" secondAttribute="bottom" id="iNm-dm-mxa"/>
                     <constraint firstItem="ANd-ot-uaU" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" multiplier="3:2" constant="-10" id="ibB-l5-Bkv"/>
