--- a/AutoMall/ViewControllers/Upkeep/CheckResultTechnicianCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CheckResultTechnicianCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default" translatesAutoresizingMaskIntoConstraints="NO" id="2ej-f0-h2k">
@@ -47,10 +47,15 @@
                     <constraint firstItem="2ej-f0-h2k" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="vt7-5X-i0D"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="25" y="65"/>
+            <connections>
+                <outlet property="contentL" destination="JbL-68-8lT" id="Kys-Ny-dfW"/>
+                <outlet property="imageV" destination="2ej-f0-h2k" id="O6r-dY-GIV"/>
+                <outlet property="nameL" destination="j7X-Wb-dTv" id="cZn-mZ-703"/>
+            </connections>
+            <point key="canvasLocation" x="-589" y="22"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="default" width="512" height="512"/>
+        <image name="default" width="302" height="302"/>
     </resources>
 </document>
