--- a/AutoMall/ViewControllers/PersonalCenter/ApplyAuthenticationVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/ApplyAuthenticationVC.xib
@@ -31,11 +31,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="2400"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="1825"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fPB-cF-lHZ">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="2351"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="1776"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mXp-n9-uLY">
                             <rect key="frame" x="0.0" y="10" width="375" height="44"/>
@@ -58,12 +58,12 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="点击上传门店照片&gt;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4br-vS-LKj">
-                                    <rect key="frame" x="195" y="11" width="132" height="21"/>
+                                    <rect key="frame" x="203.5" y="11" width="123.5" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="21" id="Eu0-jL-PvC"/>
                                     </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <color key="textColor" red="0.2470588235" green="0.2470588235" blue="0.2470588235" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
@@ -79,7 +79,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w6n-MO-ip1">
-                            <rect key="frame" x="0.0" y="64" width="375" height="535"/>
+                            <rect key="frame" x="0.0" y="54" width="375" height="535"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OK6-Bd-rfK">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
@@ -534,7 +534,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ms5-CF-x3J">
-                            <rect key="frame" x="0.0" y="609" width="375" height="355"/>
+                            <rect key="frame" x="0.0" y="599" width="375" height="355"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lIm-bx-JlO">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
@@ -557,7 +557,7 @@
                                     </variation>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qiI-ND-qXz">
-                                    <rect key="frame" x="8" y="45" width="367" height="1"/>
+                                    <rect key="frame" x="0.0" y="45" width="375" height="1"/>
                                     <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="shv-fL-NEu" customClass="NSLayoutConstraintOnePixelLine"/>
@@ -698,12 +698,12 @@
                                 <constraint firstItem="lIm-bx-JlO" firstAttribute="leading" secondItem="ms5-CF-x3J" secondAttribute="leading" id="nPh-v9-MbE"/>
                                 <constraint firstAttribute="trailing" secondItem="qiI-ND-qXz" secondAttribute="trailing" id="qpG-DO-7d6"/>
                                 <constraint firstItem="qJa-dT-JIA" firstAttribute="leading" secondItem="RO6-uG-dMl" secondAttribute="trailing" constant="8" id="sE2-6b-QLK"/>
-                                <constraint firstItem="qiI-ND-qXz" firstAttribute="leading" secondItem="ms5-CF-x3J" secondAttribute="leading" constant="8" id="tBx-AD-SVe"/>
+                                <constraint firstItem="qiI-ND-qXz" firstAttribute="leading" secondItem="ms5-CF-x3J" secondAttribute="leading" id="tBx-AD-SVe"/>
                                 <constraint firstItem="RO6-uG-dMl" firstAttribute="top" secondItem="qiI-ND-qXz" secondAttribute="bottom" constant="11" id="zSH-Qs-auB"/>
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yRO-FK-v1j">
-                            <rect key="frame" x="0.0" y="974" width="375" height="310"/>
+                            <rect key="frame" x="0.0" y="964" width="375" height="310"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zIU-vm-wDT">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="1"/>
@@ -735,7 +735,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mys-Bq-48v">
-                                    <rect key="frame" x="8" y="45" width="367" height="1"/>
+                                    <rect key="frame" x="0.0" y="45" width="375" height="1"/>
                                     <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="AT1-F1-wfl" customClass="NSLayoutConstraintOnePixelLine"/>
@@ -835,7 +835,7 @@
                                 <constraint firstAttribute="bottom" secondItem="OLi-Av-oS8" secondAttribute="bottom" id="34q-fd-dqp"/>
                                 <constraint firstItem="ZDs-8Q-bo0" firstAttribute="top" secondItem="zIU-vm-wDT" secondAttribute="bottom" constant="7" id="6kv-BB-IRn"/>
                                 <constraint firstItem="pRJ-vU-hRe" firstAttribute="top" secondItem="mys-Bq-48v" secondAttribute="bottom" constant="12" id="7ME-XR-l3g"/>
-                                <constraint firstItem="mys-Bq-48v" firstAttribute="leading" secondItem="yRO-FK-v1j" secondAttribute="leading" constant="8" id="8P9-24-zzl"/>
+                                <constraint firstItem="mys-Bq-48v" firstAttribute="leading" secondItem="yRO-FK-v1j" secondAttribute="leading" id="8P9-24-zzl"/>
                                 <constraint firstAttribute="trailing" secondItem="zIU-vm-wDT" secondAttribute="trailing" id="BWu-rd-eEL"/>
                                 <constraint firstAttribute="trailing" secondItem="OLi-Av-oS8" secondAttribute="trailing" id="FC3-Mq-Bm6"/>
                                 <constraint firstAttribute="trailing" secondItem="pRJ-vU-hRe" secondAttribute="trailing" constant="16" id="IAc-Dm-KK0"/>
@@ -870,11 +870,11 @@
                         <constraint firstAttribute="trailing" secondItem="w6n-MO-ip1" secondAttribute="trailing" id="gwt-NU-erI"/>
                         <constraint firstItem="yRO-FK-v1j" firstAttribute="leading" secondItem="fPB-cF-lHZ" secondAttribute="leading" id="knq-IW-kmm"/>
                         <constraint firstItem="dBf-pL-x54" firstAttribute="width" secondItem="dsX-8J-TZ0" secondAttribute="width" id="lAB-H0-4fa"/>
-                        <constraint firstItem="w6n-MO-ip1" firstAttribute="top" secondItem="mXp-n9-uLY" secondAttribute="bottom" constant="10" id="wjU-EU-X0c"/>
+                        <constraint firstItem="w6n-MO-ip1" firstAttribute="top" secondItem="mXp-n9-uLY" secondAttribute="bottom" id="wjU-EU-X0c"/>
                     </constraints>
                 </scrollView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ggi-so-8Bg">
-                    <rect key="frame" x="0.0" y="2351" width="375" height="49"/>
+                    <rect key="frame" x="0.0" y="1776" width="375" height="49"/>
                     <color key="backgroundColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="49" id="z1B-Kl-tRH"/>
@@ -898,7 +898,7 @@
                 <constraint firstItem="mXp-n9-uLY" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" id="ycI-p8-0QA"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-368.5" y="726"/>
+            <point key="canvasLocation" x="-368.5" y="438.5"/>
         </view>
     </objects>
     <resources>
