--- a/AutoMall/ViewControllers/PersonalCenter/UpkeepStatementVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/UpkeepStatementVC.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,8 +13,11 @@
             <connections>
                 <outlet property="calendarBgView" destination="5Pm-l1-IWf" id="RwE-59-A7e"/>
                 <outlet property="dateL" destination="KX8-tK-o7b" id="843-Ou-eOo"/>
+                <outlet property="monthBtn" destination="ja4-kt-CkK" id="HS7-5P-SLv"/>
                 <outlet property="topView" destination="dTX-Id-pEs" id="ZSG-Bh-wyd"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="weekBtn" destination="HQg-LA-PwL" id="YIY-sU-gby"/>
+                <outlet property="yearBtn" destination="pPs-PY-TLA" id="uVu-Lc-Mvn"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -38,6 +41,9 @@
                             <state key="selected">
                                 <color key="titleColor" red="0.91764705879999997" green="0.12941176469999999" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
+                            <connections>
+                                <action selector="weekAction:" destination="-1" eventType="touchUpInside" id="LMx-N6-gR2"/>
+                            </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kg3-og-Ewn">
                             <rect key="frame" x="16" y="42" width="60" height="2"/>
@@ -56,6 +62,9 @@
                             <state key="selected">
                                 <color key="titleColor" red="0.92941176469999998" green="0.10980392160000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
+                            <connections>
+                                <action selector="yearAction:" destination="-1" eventType="touchUpInside" id="gKf-le-mmB"/>
+                            </connections>
                         </button>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7W9-ZE-3Qy">
                             <rect key="frame" x="299.5" y="42" width="60" height="2"/>
@@ -82,6 +91,9 @@
                             <state key="selected">
                                 <color key="titleColor" red="0.92941176469999998" green="0.10980392160000001" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
                             </state>
+                            <connections>
+                                <action selector="monthAction:" destination="-1" eventType="touchUpInside" id="B4D-hU-rTv"/>
+                            </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MIB-tm-Sz7">
                             <rect key="frame" x="0.0" y="43.5" width="375" height="0.5"/>
@@ -189,7 +201,7 @@
                 <constraint firstAttribute="trailing" secondItem="5Pm-l1-IWf" secondAttribute="trailing" id="aN6-py-IPE"/>
                 <constraint firstItem="dTX-Id-pEs" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="dwo-Gm-Ocj"/>
             </constraints>
-            <point key="canvasLocation" x="28" y="70"/>
+            <point key="canvasLocation" x="-478" y="150"/>
         </view>
     </objects>
 </document>
