--- a/AutoMall/ViewControllers/PersonalCenter/EmployeeEditIntroduceVC.xib
+++ b/AutoMall/ViewControllers/PersonalCenter/EmployeeEditIntroduceVC.xib
@@ -37,10 +37,10 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EWG-Y1-TRf">
-                            <rect key="frame" x="0.0" y="64" width="375" height="260"/>
+                            <rect key="frame" x="0.0" y="64" width="375" height="220"/>
                             <subviews>
                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="技能详细介绍" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="obe-KQ-vA4">
-                                    <rect key="frame" x="16" y="59" width="343" height="157"/>
+                                    <rect key="frame" x="16" y="10" width="343" height="166"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -48,27 +48,8 @@
                                         <outlet property="delegate" destination="-1" id="yRj-ky-4dM"/>
                                     </connections>
                                 </textView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="技能特长" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2cS-vp-sYb">
-                                    <rect key="frame" x="16" y="8" width="69.5" height="22"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="22" id="tFN-TE-j3C"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <nil key="textColor"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W4b-jP-XNb">
-                                    <rect key="frame" x="16" y="38" width="359" height="1"/>
-                                    <color key="backgroundColor" red="0.7843137255" green="0.7843137255" blue="0.80000000000000004" alpha="1" colorSpace="deviceRGB"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="1" id="gJ6-x3-Tax" customClass="NSLayoutConstraintOnePixelLine"/>
-                                    </constraints>
-                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                    <color key="textColor" red="0.7843137255" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0/255" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="umG-ej-HTA">
-                                    <rect key="frame" x="322.5" y="228" width="36.5" height="16"/>
+                                    <rect key="frame" x="322.5" y="188" width="36.5" height="16"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
@@ -76,18 +57,13 @@
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="260" id="5fC-MP-IxD"/>
+                                <constraint firstItem="obe-KQ-vA4" firstAttribute="top" secondItem="EWG-Y1-TRf" secondAttribute="top" constant="10" id="3ag-Vd-rZ8"/>
+                                <constraint firstAttribute="height" constant="220" id="5fC-MP-IxD"/>
                                 <constraint firstItem="umG-ej-HTA" firstAttribute="top" secondItem="obe-KQ-vA4" secondAttribute="bottom" constant="12" id="9MD-MV-OrP"/>
-                                <constraint firstItem="2cS-vp-sYb" firstAttribute="leading" secondItem="EWG-Y1-TRf" secondAttribute="leading" constant="16" id="CPz-Hl-MuL"/>
                                 <constraint firstAttribute="trailing" secondItem="obe-KQ-vA4" secondAttribute="trailing" constant="16" id="D1W-Zu-i9w"/>
                                 <constraint firstAttribute="trailing" secondItem="umG-ej-HTA" secondAttribute="trailing" constant="16" id="EXQ-8N-xiJ"/>
                                 <constraint firstItem="obe-KQ-vA4" firstAttribute="leading" secondItem="EWG-Y1-TRf" secondAttribute="leading" constant="16" id="FWf-kA-764"/>
-                                <constraint firstAttribute="trailing" secondItem="W4b-jP-XNb" secondAttribute="trailing" id="O3Z-V6-gJc"/>
-                                <constraint firstItem="2cS-vp-sYb" firstAttribute="top" secondItem="EWG-Y1-TRf" secondAttribute="top" constant="8" id="PJw-sQ-gX1"/>
-                                <constraint firstItem="W4b-jP-XNb" firstAttribute="top" secondItem="2cS-vp-sYb" secondAttribute="bottom" constant="8" id="RD2-ho-VTN"/>
-                                <constraint firstItem="W4b-jP-XNb" firstAttribute="leading" secondItem="EWG-Y1-TRf" secondAttribute="leading" constant="16" id="YcF-06-CVq"/>
                                 <constraint firstAttribute="bottom" secondItem="umG-ej-HTA" secondAttribute="bottom" constant="16" id="bf6-Cx-yft"/>
-                                <constraint firstItem="obe-KQ-vA4" firstAttribute="top" secondItem="W4b-jP-XNb" secondAttribute="bottom" constant="20" id="rrc-hp-C3x"/>
                             </constraints>
                         </view>
                     </subviews>
