--- a/AutoMall/ViewControllers/Upkeep/AddStoreServiceVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/AddStoreServiceVC.xib
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9hZ-V6-oQd">
-                    <rect key="frame" x="0.0" y="84" width="375" height="44"/>
+                    <rect key="frame" x="0.0" y="74" width="375" height="44"/>
                     <subviews>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请填写服务内容" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="pcw-Gm-WcK">
                             <rect key="frame" x="16" y="7" width="166" height="30"/>
@@ -66,7 +66,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="备注：可以添加机油、轮胎等不同品牌规格的报价。或其它门店的特色服务。" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rHB-BZ-fH6">
-                    <rect key="frame" x="16" y="136" width="343" height="38"/>
+                    <rect key="frame" x="16" y="126" width="343" height="38"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="38" id="p3D-kC-pP6"/>
                     </constraints>
@@ -87,7 +87,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="yiM-av-i8B" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="0FL-fZ-pyo"/>
                 <constraint firstItem="rHB-BZ-fH6" firstAttribute="top" secondItem="9hZ-V6-oQd" secondAttribute="bottom" constant="8" id="C2g-sg-9tF"/>
@@ -96,10 +96,10 @@
                 <constraint firstItem="rHB-BZ-fH6" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="QIz-Iz-fLl"/>
                 <constraint firstAttribute="trailing" secondItem="rHB-BZ-fH6" secondAttribute="trailing" constant="16" id="Y3K-sW-7nA"/>
                 <constraint firstAttribute="trailing" secondItem="yiM-av-i8B" secondAttribute="trailing" id="ZHS-Ld-UNv"/>
-                <constraint firstItem="9hZ-V6-oQd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="84" id="enG-E3-ghA"/>
+                <constraint firstItem="9hZ-V6-oQd" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="74" id="enG-E3-ghA"/>
                 <constraint firstItem="9hZ-V6-oQd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="kBx-mf-rFQ"/>
             </constraints>
-            <point key="canvasLocation" x="-269" y="64"/>
+            <point key="canvasLocation" x="-578" y="61"/>
         </view>
     </objects>
 </document>
